[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Tilesets/tiles.png" type="Texture" id=1]
[ext_resource path="res://Interactables/TreasureChest.gd" type="Script" id=2]
[ext_resource path="res://Assets/Audio/SFX/open_start.wav" type="AudioStream" id=3]
[ext_resource path="res://Assets/Audio/SFX/open_end.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 2.95229, 2.84893 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 2.84392, 4.2983 )

[node name="TreasureChest" type="StaticBody2D"]
position = Vector2( 124, 60 )
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.511559, 0.0852623 )
shape = SubResource( 1 )

[node name="tiles" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
offset = Vector2( 0.5, -1 )
hframes = 2
frame = 1
region_enabled = true
region_rect = Rect2( 117, 9, 17, 8 )

[node name="SfxOpenStart" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.0

[node name="SfxOpenEnd" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.0

[node name="Interacter" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interacter"]
modulate = Color( 0.262745, 0.933333, 0.0784314, 1 )
position = Vector2( 0.511551, 1.19361 )
shape = SubResource( 2 )
[connection signal="body_entered" from="Interacter" to="." method="_on_Interacter_body_entered"]
[connection signal="body_exited" from="Interacter" to="." method="_on_Interacter_body_exited"]
